feat: Phase 2 complete — JobQueue + RateLimiter + Webhook + Metrics fully wired
P0: PO/Mapper/XML (9 files) for job_record, webhook_subscription, rate_limit_config
P0: JobController + WebhookController + RateLimiterFilter (11 files)
P1: JobPoller (@Scheduled 2s) + JobHandler + ImportJobHandler (4 files)
P1: Webhook callback chain integrated into JobPoller
P1: Metrics (micrometer-registry-prometheus) wired into RateLimiterFilter, JobPoller, IdempotencyService
P1: Unit tests (20 cases) for JobController, WebhookController, RateLimiterFilter

Fix: determineHttpStatus() 3000-3999 -> BAD_REQUEST
Fix: -parameters compiler flag for @PathVariable name resolution
Fix: 58 pre-existing test failures (timestamp precision, ApiResponse structure, missing mocks, etc.)
Upgrade: mvn clean test — ~540 tests, 0 failures

Architecture:
  Agent -> JobController -> PG + Redis -> JobPoller -> ImportJobHandler
       -> WebhookDispatcher -> Agent callback
  RateLimiterFilter (TENANT+AGENT, 429)
  /actuator/prometheus endpoint